--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -3,6 +3,8 @@
   background-color: white;
   align-items: center;
   box-shadow: 0px 3px 1px -1px rgb(218, 218, 218);
+  display: flex;
+  justify-content: space-between;
 }
 
 .title {
@@ -22,3 +24,4 @@
   width: 2.5rem;
   border-radius: 50%;
 }
+
